--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "ejs": "^3.1.6",
     "express": "^4.18.1",
     "express-session": "^1.17.2",
-    "sqlite3": "^5.0.0"
+    "sqlite3": "^5.0.0",
     "multer": "^1.4.5"
   }
 }
