--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "express": "^4.18.1",
     "express-session": "^1.17.2",
     "sqlite3": "^5.0.0",
-    "multer": "^1.4.5-lts.1",
-  ...
+    "multer": "^1.4.5-lts.1"
   }
 }
