--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "balcao-virtual-clone",
-  "version": "2.0.0",
-  "description": "Clone do Balcão Virtual INATRO com SQLite e autenticação",
+  "version": "1.0.0",
+  "description": "Clone do Balcão Virtual do INATRO com Node.js",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
@@ -11,7 +11,7 @@
     "ejs": "^3.1.6",
     "express": "^4.18.1",
     "express-session": "^1.17.2",
-    "sqlite3": "^5.0.0",
+    "sqlite3": "^5.1.6",
     "multer": "^1.4.5-lts.1"
   }
 }
